# led-name-badge

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: release.yml  rust.yml
doc/: 99-led_badge.rules
src/: arg_parser.rs  main.rs
src/badge/: error.rs  font_finder.rs  font_selector.rs  image_io.rs  mod.rs  text.rs
src/badge/device/: b1248.rs  mod.rs  s1144.rs
