[package]
name = "led-name-badge"
version = "0.1.0"
description = "USB LED name badge control tool"
authors = ["@cat_in_136"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.2.2"
freetype-rs = "0.26.0"
png = "0.16.4"
